fixed z-index from cartsummary fixed z-index from navbar fixed overflow-y from burgermenu main page query now brings 10 products to show

--- a/src/components/MenuDropdown/scss/index.scss
+++ b/src/components/MenuDropdown/scss/index.scss
@@ -20,7 +20,7 @@
     
     &--visible {
       display: block;
-      z-index: 2;
+      z-index: 6;
     }
 
     ul {
